--- a/package.json
+++ b/package.json
@@ -8,15 +8,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.7.2",
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
+    "@icon-park/react": "^1.3.5",
+    "framer-motion": "^5.3.0",
+    "mapbox-gl": "^1.13.2",
+    "mapbox-gl-compare": "^0.4.0",
+    "maplibre-gl": "^1.15.2",
     "next": "12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/maplibre-gl": "^1.14.0",
     "@types/node": "16.11.8",
     "@types/react": "17.0.35",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
+    "eslint-config-prettier": "^8.3.0",
+    "prettier": "^2.4.1",
     "typescript": "4.5.2"
   }
 }
